--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title:             Xin's Network
+title:             X | N Blog
 email:             xinii@msn.com
-description:       Welcome to my personal website!
+description:       Welcome to X | N Blog
 author:            Xin Li
 baseurl:           ""
 url:               "https://xinii.github.io"
