--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title:             X | N Blog
 email:             xinii@msn.com
-description:       Welcome to X | N Blog
+description:       Welcome!
 author:            Xin Li
 baseurl:           ""
 url:               "https://xinii.github.io"
